--- a/Services/RaveAppAPI.Services.csproj
+++ b/Services/RaveAppAPI.Services.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="MySql.Data" Version="8.3.0" />
