--- a/RaveAppAPI/RaveAppAPI.csproj
+++ b/RaveAppAPI/RaveAppAPI.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\Services\RaveAppAPI.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="logs\" />
+  </ItemGroup>
+
 </Project>
