--- a/RaveAppAPI/RaveAppAPI.csproj
+++ b/RaveAppAPI/RaveAppAPI.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="ErrorOr" Version="1.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.36" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     <PackageReference Include="System.Text.Json" Version="9.0.3" />
